# wc

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  prelude.cmake  variables.cmake
src/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/src/: wc_test.cpp
